[package]
name = "modem_status"
version = "0.2.0"
authors = ["Matthew Donoughe <mdonoughe@gmail.com>"]
edition = "2018"

[[bin]]
name = "modem_status"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
lazy_static = "1"
reqwest = { version = "0.10", features = ["cookies"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
unhtml = { version = "0.8", features = ["derive"] }
url = "2"
warp = "0.2"
